bugs: bug squash

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,31 +86,3 @@ body {
 footer{
   margin-top:40px;
 }
-
-.styled-select {
-  background: url(http://i62.tinypic.com/15xvbd5.png) no-repeat 96% 0;
-  height: 29px;
-  overflow: hidden;
-  width: 240px;
-}
-.styled-select select {
-  background: transparent;
-  border: none;
-  font-size: 18px;
-  height: 32px;
-  padding: 5px;
-  /* If you add too much padding here, the options won't show in IE */
-  width: 268px;
-}
-
-.semi-square {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-
-.blue {
-  background-color: #3b8ec2;
-}
-
-.blue select    { color: #fff; }
